# lcdos

./: README.md  pyproject.toml
lcdos/: __main__.py  main.py  utils.py
tests/: test_lcdos.py
